# sigsum-py

./: .gitignore  .gitlab-ci.yml  AUTHORS  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  siglog-witness.py  sigsum-witness.py  sigsum-witness_test.py  sigsum_witness.py  tox.ini
integration/: .gitignore  test.sh
issues/: dont-bootstrap-at-0.md  strict-hex-parsing.md  update-timestamp-verification.md
sigsum/: ascii.py  ascii_test.py  client.py  client_test.py  crypto.py  crypto_test.py  tree.py  tree_test.py
sigsum/crypto/: __init__.py  _keyfile.py  _keyfile_test.py  _sshagent.py  _sshagent_test.py
sigsum/crypto/testdata/: ssh-key
tools/: libsigntools.py  sigsum-gensigkey.py  sigsum-sign-leaf.py  sigsum-verify-leaf.py  sshkey2nacl.py
