[tool.poetry]
name = "sigsum-witness"
version = "0.1.0"
description = "A witness for the Sigsum transparency log"
license = "BSD-2-Clause"
authors = [
  "Linus Nordberg <linus@nordberg.se>",
  "Grégoire Détrez <gregoire@mullvad.net>",
  "Rasmus Dahlberg <rasmus.dahlberg@kau.se>",
  "Niels Möller <nisse@glasklarteknik.se>"
]
maintainers = ["Grégoire Détrez <gregoire@mullvad.net>"]
homepage = "https://sigsum.org/"
repository = "https://git.glasklar.is/sigsum/core/sigsum-py/"
packages = [
  { include = "sigsum" },
  { include = "sigsum_witness.py" },
  { include = "tools" },
]

[tool.poetry.scripts]
sigsum-witness = "sigsum_witness:main"

[tool.poetry.dependencies]
python = "^3.10"
PyNaCl = "^1.5.0"
requests = "^2.28.1"
prometheus_client = "^0.14.1"
urllib3 = "1.26.15"
flask = "^2.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
responses = "^0.21.0"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
